Correction mobile version

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -177,12 +177,9 @@ footer small {
 }
 
 .cognito {
-    height: 600px !important;
     overflow: hidden !important;
     background-color: #FFFFFF;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 30px;
+    padding: 20px;
 }
 
 #tenho-interesse {
@@ -191,10 +188,22 @@ footer small {
 }
 
 @media (max-width: 425px) {
-    section nav,
+    
+    section .container {
+        width: 100%;
+    }
+
     section article {
         width: 100%;
     }  
+
+    .container nav{
+        width: 100%;
+    }
+
+    .container li {
+        margin: 0px 0px 10px 0px;
+    }
 
     .container {
         padding-left: 1%;
